test: h1 font-weight normal to stop extra letter spacing on mobile

--- a/index.scss
+++ b/index.scss
@@ -172,10 +172,10 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
   font-family: Netflix-Bold;
+  font-weight: normal;
 
   @media only screen and (max-width: 800px) {
     font-size: 30px;
-    letter-spacing: -1px;
   }
 }
 
